# pydov

./: .gitignore  README.md  config.py  pyproject.toml
data/: keymap.json
dov/: core.py  keyboard.py  keylogger.py  main.py  mapping.py  viz.py  xlib2pyautogui.py
