[tool.poetry]
name = "pydov"
version = "0.1.0"
description = "Touch typing on a gamepad"
authors = ["Kris <31852063+krisfris@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "2.0.0.dev8"
Pillow = "^7.1.2"
pyautogui = "^0.9.50"
appdirs = "^1.4.4"
pyxhook = {git = "https://github.com/krisfris/pyxhook.git"}
networkx = "^2.4"
matplotlib = "^3.2.2"
tendo = "^0.2.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
